# bedrock-chat

./: .env.example  .gitignore  PLAN.md  README.md  create-shortcuts.ps1  pyproject.toml  requirements.txt  run.py  setup.bat  setup.vbs  start.bat  start.vbs
_handoffs/: 2026-03-28_091500_file-upload-and-polish.md
backend/: app.py  config.py  dependencies.py
backend/database/: engine.py  init_db.py  models.py
backend/routers/: chat.py  conversations.py  models.py  setup.py
backend/schemas/: chat.py  conversation.py  model_config.py
backend/services/: bedrock.py  conversation.py  model_config.py
backend/utils/: encryption.py  streaming.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatArea.tsx  ChatInput.tsx  ConfigPanel.tsx  LoadingDots.tsx  MessageBubble.tsx  ModelSelector.tsx  SetupScreen.tsx  Sidebar.tsx  SystemPromptInput.tsx  ThemeSelector.tsx
frontend/src/hooks/: useAutoScroll.ts  useChat.ts  useConversations.ts  useModels.ts  useTheme.ts
frontend/src/services/: api.ts  stream.ts
frontend/src/types/: index.ts
frontend/src/utils/: markdown.ts
