[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "bedrock-chat"
version = "0.1.0"
description = "Self-contained chat webapp using AWS Bedrock"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "boto3>=1.35",
    "sqlalchemy>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "cryptography>=43.0",
    "filelock>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]
